# g-shock-date-checker

./: .gitignore  Cargo.toml  LICENSE  MakeFile  README.md
crates/code-parser/: Cargo.toml
crates/code-parser/src/: code_parser.rs  lib.rs  locations.json  year.json
crates/frontend/: Cargo.toml  Trunk.toml  index.html  index.scss
crates/frontend/src/: lib.rs  main.rs
crates/frontend/src/components/: mod.rs
crates/frontend/src/components/footer/: Footer.scss  mod.rs
crates/frontend/src/components/header/: Header.scss  mod.rs
crates/frontend/src/components/main/: Main.scss  mod.rs
crates/frontend/src/components/poster/: Poster.scss  mod.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
