[package]
name = "frontend"
version = "1.0.0"
edition = "2021"

[dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
grass = { version = "0.12.4", features = ["macro"] }
stylist = { version = "0.12.1", features = ["yew","parser"] }
wasm-bindgen = "0.2.92"
web-sys = "0.3.69"
yew = { version = "0.20.0", features = ["csr"] }
serde_json = "1.0.120"
code-parser = { path = "../code-parser" }